# chika

./: README.md  pyproject.toml  setup.py  tox.ini
.github/: action.yaml
.github/workflows/: action.yaml  pypi.yaml  test.yaml
chika/: __init__.py  chika.py  utils.py
tests/: test_config.py  test_io.py  test_main.py  test_parser.py
